--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "cushion",
   "version": "0.0.2",
-  "dependencies": {},
+  "dependencies": {
+    "nodejs-microdb": "0.0.2"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
