--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "backbone-amd": "~1.0.0",
     "jquery": "~1.10.1",
     "jquery-ui": "~1.10.3",
+    "spin.js": "~1.3.0",
     "hbs": "latest",
     "font-awesome": "latest"
   },
