Linguist vendor ignores

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto
+.htaccess linguist-vendored=true
 app/styles/jquery-ui/* linguist-vendored
 app/styles/faw/scss/* linguist-vendored
 app/scripts/vendor/* linguist-vendored
