--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 * text=auto
 .htaccess linguist-vendored=true
-bootstrap.js linguist-vendored=true
-marked.js linguist-vendored=true
-app/styles/* linguist-vendored
-app/styles/main.scss linguist-vendored=false
+app/styles/faw/scss/* linguist-vendored
+app/styles/jquery-ui/* linguist-vendored
+app/scripts/vendor/* linguist-vendored
